--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ BLABABABABABBAB
                 <div class="service-text">
                     <br>
                     <h3 class="h4">Profil personnalisé</h3>
-                    <p>BLABALVABLABLBLABAL
+                    <p>Vos informations de profil nécessaires (exemple : statut étudiant, retraité, niveau de QF de la CAF) rassemblées dans un compte unique, commun à tous les réseaux de transports en commun (urbains et interurbains) de France.
                     </p>
                 </div>
             </div>
