--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@ BLABABABABABBAB
                         <a href="https://franceconnect.gouv.fr" target="_blank"><img src="images/kbs.png" alt="FranceConnect parce que vous le vallez bien!" style="width:200px;height:100px;"></a>
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">Identification via FranceConnect</h3>
-                    <p>BALALAVALVVLAVLAV
+                    <h3 class="h4">Profil personnalisé</h3>
+                    <p>Vos informations de profil nécessaires (exemple : statut étudiant, retraité, niveau de QF de la CAF) rassemblées dans un compte unique, commun à tous les réseaux de transports en commun (urbains et interurbains) de France.
                     </p>
                 </div>
             </div>
@@ -212,8 +212,8 @@ BLABABABABABBAB
                 </div>
                 <div class="service-text">
                     <br>
-                    <h3 class="h4">Profil personnalisé</h3>
-                    <p>Vos informations de profil nécessaires (exemple : statut étudiant, retraité, niveau de QF de la CAF) rassemblées dans un compte unique, commun à tous les réseaux de transports en commun (urbains et interurbains) de France.
+                    <h3 class="h4">Simplicité</h3>
+                    <p>Plus de démarches de souscription de cartes de réduction ! Les réseaux s’occupent de récupérer vos informations de profil et vous attribuent le tarif adéquat selon la fréquence de vos déplacements et leur politique tarifaire locale.
                     </p>
                 </div>
             </div>
