--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="fr">
 <head>
 
     <!--- basic page needs
@@ -197,7 +197,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item " data-aos="fade-up">
                 <div class="service-icon service-icon--brand-identity">
-                        <a href="https://franceconnect.gouv.fr" target="_blank"><img src="images/kbs.png" alt="FranceConnect parce que vous le vallez bien!" style="width:200px;height:100px;"></a>
+                        <a href="https://franceconnect.gouv.fr" target="_blank"><img src="images/CM.png" alt="FranceConnect parce que vous le vallez bien!" style="width:200px;height:100px;"></a>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Profil personnalisé</h3>
@@ -208,7 +208,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--illustration">
-                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:320px;height:225px;"></a>
+                        <a href="" target="_blank"><img src="images/kbs.png" alt="" style="width:320px;height:225px;"></a>
                 </div>
                 <div class="service-text">
                     <br>
