--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ BLABABABABABBAB
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--web-design">
-                        <a href="" target="_blank"><img src="images/BDA.png" alt="" style="width:250px;height:100px;"></a>
+                        <a href="" target="_blank"><img src="images/logo.png" alt="" style="width:200px;height:150px;"></a>
                 </div>  
                 <div class="service-text">
                     <h3 class="h4">Un titre unique</h3>
