--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ BLABABABABABBAB
                 </div>  
                 <div class="service-text">
                     <h3 class="h4">Un titre unique</h3>
-                    <p>Un titre valable partout en France
+                    <p>Voyagez librement partout en France grâce à votre droit à circuler national.
                     </p>
                 </div>
             </div>
