--- a/index.html
+++ b/index.html
@@ -262,15 +262,15 @@ BLABABABABABBAB
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                BLABLBALBALBABL
+                                1
                             </h3>
                             <p class="item-folio__cat">
-                                    BLABLBALBALBABL 
+                                    Prendez rendez-vous 
                             </p>
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            BLABLBALBALBABL
+                            Prenez rendez-vous avec un ambassadeur mobilité
                         </a>
 
                         <div class="item-folio__caption">
