--- a/index.html
+++ b/index.html
@@ -138,33 +138,35 @@
                     <div class="process__text">
                         <h4>Votre inscription</h4>
 
-                        <p>BLLALALALALAL                        </p>
+                        <p>Un Compte unique commun à tous les services de transports en commun de France. Connectez-vous via FranceConnect pour activer votre Compte Mobilité Unique.
+</p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="2" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Activer votre compte</h4>
+                        <h4>Acquisition du support</h4>
 
                         <p>
-                        BLLALALALALAL
+                        Demandez votre carte de transport auprès de votre réseau de transports en commun favori. Elle vous permettra de vous déplacer partout en France. Vous pouvez aussi télécharger votre QR code unique.
+
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Recharger</h4>
+                        <h4>Rechargement de votre Compte Mobilité</h4>
 
                         <p>
-BLLALALALALALBLLALALALALAL
+Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en agence ou chez un dépositaire du réseau Compte Mobilité Unique pour recharger votre cagnotte (carte bancaire ou espèces).
                             </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="4" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Voyager</h4>
+                        <h4>Voyager !</h4>
 
                         <p>
-                      BLALBLLAABLLLAB
+                      Voyagez librement en France en validant votre support à chaque montée. En fin de mois, votre cagnotte sera débitée automatiquement du tarif le plus juste et avantageux pour vous, selon vos usages des différents services de mobilité et votre profil.
                         </p>
                     </div>
                 </div>
