--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                    Encourager la facilité de vos déplacements par l'accompagnement  
+                    Encourager la facilité de vos déplacements grâce à un accompagnement personnalisé
                 </p>
             </div>
         </div> <!-- end about-desc -->
