--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--web-design">
-                        <a href="" target="_blank"><img src="images/logo.png" alt="" style="width:200px;height:150px;"></a>
+                        <a href="" target="_blank"><img src="images/logo2.png" alt="" style="width:200px;height:150px;"></a>
                 </div>  
                 <div class="service-text">
                     <h3 class="h4">Un titre unique</h3>
