--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
             <div class="col-block service-item " data-aos="fade-up">
                 <div class="service-icon service-icon--brand-identity">
-                        <a href="https://franceconnect.gouv.fr" target="_blank"><img src="images/CM.png" alt="FranceConnect parce que vous le vallez bien!" style="width:275px;height:100px;"></a>
+                        <a href="" target="_blank"><img src="images/CM.png" alt="" style="width:275px;height:100px;"></a>
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Profil personnalisé</h3>
