--- a/index.html
+++ b/index.html
@@ -263,15 +263,15 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                1
+                                Prenez rendez-vous avec un ambassadeur mobilité
                             </h3>
                             <p class="item-folio__cat">
-                                    Prendez rendez-vous 
+                                Etape 1 
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Prenez rendez-vous avec un ambassadeur mobilité
+                        <a href="" class="item-folio__project-link" title="Project link">
+                            
                         </a>
 
                         <div class="item-folio__caption">
