--- a/index.html
+++ b/index.html
@@ -266,16 +266,13 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                                 Prenez rendez-vous avec un ambassadeur mobilité
                             </h3>
                             <p class="item-folio__cat">
-                                Etape 1 
                             </p>
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            
                         </a>
-
                         <div class="item-folio__caption">
-                            <p>BLABLBALBALBABL </p>
+                            <p>Etape 1</p>
                         </div>
 
                     </div> <!-- end item-folio -->
