--- a/index.html
+++ b/index.html
@@ -290,15 +290,14 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Download our Phone APP
+                               Acquérir un support (carte ou dématérialisé)
                             </h3>
                             <p class="item-folio__cat">
-                                    BLABLBALBALBABL
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            BLABLBALBALBABL
+                        <a href="" class="item-folio__project-link" title="Project link">
+                            Etape 2
                         </a>
 
                         <span class="item-folio__caption">
