--- a/index.html
+++ b/index.html
@@ -447,11 +447,11 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                 <h5>Enthousiastes</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">48</div>
+                <div class="stats__count">+48</div>
                 <h5>Heures de Hackathon</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">10</div>
+                <div class="stats__count">+20</div>
                 <h5>Cafés par personnes</h5> 
             </center>
                  </div>
