--- a/index.html
+++ b/index.html
@@ -270,9 +270,10 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
+                            Etape 1
                         </a>
                         <div class="item-folio__caption">
-                            <p>Etape 1</p>
+                            <p></p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -319,15 +320,14 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                BLABLBALBALBABL
+                                Recharger votre compte mobilité
                             </h3>
                             <p class="item-folio__cat">
-                                   BLABLBALBALBABL
                             </p>
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 3
+                            Etape 3
                         </a>
 
                         <span class="item-folio__caption">
@@ -357,7 +357,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 4
+                            Etape 4
                         </a>
 
                         <span class="item-folio__caption">
@@ -388,7 +388,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 6
+                            Etape 5
                         </a>
 
                         <span class="item-folio__caption">
@@ -418,7 +418,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            Step 5
+                            Etape 6
                         </a>
 
                         <span class="item-folio__caption">
