--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>BLABLBALBALBABL</p>
+                            <p></p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -331,7 +331,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>BLABLBALBALBABL</p>
+                            <p></p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -349,7 +349,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                               BLABLALBLA
+                               Recharger votre compte mobilité
                             </h3>
                             <p class="item-folio__cat">
                                 BLABLBALBALBABL
