--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="" class="item-folio__project-link" title="Project link">
                             Etape 3
                         </a>
 
@@ -352,16 +352,15 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                                Recharger votre compte mobilité
                             </h3>
                             <p class="item-folio__cat">
-                                BLABLBALBALBABL
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="" class="item-folio__project-link" title="Project link">
                             Etape 4
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>BLABLBALBALBABL</p>
+                            <p></p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -380,14 +379,14 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                BLABLBALBALBABL
+                               Trouver un point services de proximité
                             </h3>
                             <p class="item-folio__cat">
-                                BLABLBALBALBABL 
+                                
                                                         </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="" class="item-folio__project-link" title="Project link">
                             Etape 5
                         </a>
 
