--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>BLABLBALBALBABL</p>
+                            <p></p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -409,10 +409,10 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Scan the QR codes
+                                Voyager librement en validant votre support
                             </h3>
                             <p class="item-folio__cat">
-                                BLABLBALBALBABL
+                               
                             </p>
                         </div>
 
@@ -421,7 +421,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>BLABLBALBALBABL</p>
+                            <p></p>
                         </span>
 
                     </div> <!-- end item-folio -->
