--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                               Trouver un point services de proximité
+                               Retrouver l’historique de vos voyages
                             </h3>
                             <p class="item-folio__cat">
                                 
@@ -416,7 +416,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="" class="item-folio__project-link" title="Project link">
                             Etape 6
                         </a>
 
