--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/lamp.jpg" 
-                                     srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
+                                <img src="images/portfolio/g-lamp.jpg" 
+                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
@@ -283,9 +283,9 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/salad.jpg" 
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/logo2.png" class="thumb-link" title="" data-size="1050x700">
+                                <img src="images/portfolio/logo2.png" 
+                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/salad@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
