--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 1
+                            Etape 1!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                         </a>
                         <div class="item-folio__caption">
                             <p></p>
@@ -298,7 +298,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 2
+                            Etape 2!!!!!!!!!!!!!!!!!!!!!
                         </a>
 
                         <span class="item-folio__caption">
@@ -327,7 +327,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 3
+                            Etape 3!!!!!!!!!!!!!!!!!!!!!!!!!
                         </a>
 
                         <span class="item-folio__caption">
@@ -356,7 +356,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 4
+                            Etape 4!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                         </a>
 
                         <span class="item-folio__caption">
@@ -387,7 +387,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 5
+                            Etape 5!!!!!!!!!!!!!!!!!!!!!!!!!!!
                         </a>
 
                         <span class="item-folio__caption">
@@ -417,7 +417,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         </div>
 
                         <a href="" class="item-folio__project-link" title="Project link">
-                            Etape 6
+                            Etape 6!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
                         </a>
 
                         <span class="item-folio__caption">
