--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="" data-size="1050x700">
                                 <img src="images/portfolio/g-lamp.jpg" 
-                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
+                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/g-lamp.jpg 2x" alt="">
                             </a>
                         </div>
 
@@ -285,7 +285,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/logo2.png" class="thumb-link" title="" data-size="1050x700">
                                 <img src="images/portfolio/logo2.png" 
-                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/logo2.png 2x" alt="">
                             </a>
                         </div>
 
