--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/woodcraft.jpg"
-                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
+                                <img src="images/portfolio/g-woodcraft.jpg"
+                                     srcset="images/portfolio/g-woodcraft.jpg 1x, images/portfolio/g-woodcraft.jpg 2x" alt="">
                             </a>
                         </div>
 
