--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="" data-size="1050x700">
                                 <img src="images/portfolio/g-lamp.jpg" 
-                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/g-lamp.jpg 2x" alt="">
+                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/g-lamp@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
@@ -285,7 +285,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/logo2.png" class="thumb-link" title="" data-size="1050x700">
                                 <img src="images/portfolio/logo2.png" 
-                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/logo2.png 2x" alt="">
+                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/logo2@2x.png 2x" alt="">
                             </a>
                         </div>
 
@@ -314,7 +314,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="" data-size="1050x700">
                                 <img src="images/portfolio/g-woodcraft.jpg"
-                                     srcset="images/portfolio/g-woodcraft.jpg 1x, images/portfolio/g-woodcraft.jpg 2x" alt="">
+                                     srcset="images/portfolio/g-woodcraft.jpg 1x, images/portfolio/g-woodcraft@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
@@ -349,7 +349,7 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                               Recharger votre compte mobilité
+                               4.	Trouver un point services de proximité
                             </h3>
                             <p class="item-folio__cat">
                             </p>
