--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
 
-                        <div class="item-folio__thumb">
+<div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/g-lamp.jpg"
-                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/g-lamp@2x.jpg 2x" alt="">
+                                <img src="images/portfolio/lamp.jpg" 
+                                     srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
