--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
-
-                        <div class="item-folio__thumb">
+                        
+ <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/logo2.png" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/logo2.png" 
-                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/logo2@2x.png 2x" alt="">
+                                <img src="images/portfolio/logo2.png"
+                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
