--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
 <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-lamp.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/g-lamp.jpg" 
-                                     srcset="images/portfolio/g-lamp.jpg 1x, images/portfolio/g-lamp@2x.jpg 2x" alt="">
+                                <img src="images/portfolio/lamp.jpg" 
+                                     srcset="images/portfolio/lamp.jpg 1x, images/portfolio/lamp@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
@@ -282,10 +282,10 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         
- <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/logo2.png" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/logo2.png"
-                                     srcset="images/portfolio/logo2.png 1x, images/portfolio/logo2@2x.png 2x" alt="">
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="" data-size="1050x700">
+                                <img src="images/portfolio/liberty.jpg"
+                                     srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
@@ -313,8 +313,8 @@ Rechargez en ligne votre cagnotte par paiement carte bancaire. Rendez-vous en ag
 
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="" data-size="1050x700">
-                                <img src="images/portfolio/g-woodcraft.jpg"
-                                     srcset="images/portfolio/g-woodcraft.jpg 1x, images/portfolio/g-woodcraft@2x.jpg 2x" alt="">
+                                <img src="images/portfolio/woodcraft.jpg"
+                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
                             </a>
                         </div>
 
